mahed's Second change

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <main class="container">
 <span>Chera ru jalebasi lebas nist ? </span>
+        <p>Mage Lebas avaz nemikonid ? </p>
     </main>
 </body>
 </html>
